Bug 174788 - KFileDialog crashed when I chose not list hiden files
Summary: KFileDialog crashed when I chose not list hiden files
Status: RESOLVED FIXED
Alias: None
Product: kdelibs
Classification: Unmaintained
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Compiled Sources Linux
: NOR crash
Target Milestone: ---
Assignee: David Faure
URL:
Keywords:
: 173080 174854 176575 (view as bug list)
Depends on:
Blocks:
 
Reported: 2008-11-10 15:45 UTC by DONG Li
Modified: 2008-12-05 22:32 UTC (History)
5 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description DONG Li 2008-11-10 15:45:20 UTC
Version:           0.7.80 (using Devel)
Compiler:          cmake -DCMAKE_BUILD_TYPE=debugfull -DCMAKE_INSTALL_PREFIX=/usr 
OS:                Linux
Installed from:    Compiled sources

I followed the instructions on the website of okular to install it, just added debug request. Everything is normal, except that when I want to open a file, I don't want to see so many hiden files, so I choose to not list them, but okular crashed after I unchecked "Show Hiden Files".

The following is the debug information:

Application: Okular (okular), signal SIGSEGV
[Thread debugging using libthread_db enabled]
[New Thread 0xb633db50 (LWP 21386)]
[KCrash handler]
#6  0xb7776498 in KDirModelNode::rowNumber () from /usr/lib/libkio.so.5
#7  0xb77797c9 in KDirModelPrivate::_k_slotDeleteItems ()
   from /usr/lib/libkio.so.5
#8  0xb777aedd in KDirModel::qt_metacall () from /usr/lib/libkio.so.5
#9  0xb7f6c81b in QMetaObject::activate () from /usr/lib/libQtCore.so.4
#10 0xb7f6cd72 in QMetaObject::activate () from /usr/lib/libQtCore.so.4
#11 0xb77633b3 in KDirLister::itemsDeleted () from /usr/lib/libkio.so.5
#12 0xb776b7f9 in KDirLister::emitChanges () from /usr/lib/libkio.so.5
#13 0xb31603c7 in KDirOperator::updateDir () from /usr/lib/libkfile.so.4
#14 0xb3160bd7 in KDirOperator::Private::_k_slotToggleHidden ()
   from /usr/lib/libkfile.so.4
#15 0xb316a772 in KDirOperator::qt_metacall () from /usr/lib/libkfile.so.4
#16 0xb7f6c81b in QMetaObject::activate () from /usr/lib/libQtCore.so.4
#17 0xb7f6cd72 in QMetaObject::activate () from /usr/lib/libQtCore.so.4
#18 0xb6bf8539 in QAction::toggled () from /usr/lib/libQtGui.so.4
#19 0xb6bf8d7c in QAction::setChecked () from /usr/lib/libQtGui.so.4
#20 0xb6bf8e38 in QAction::activate () from /usr/lib/libQtGui.so.4
#21 0xb6f7a322 in ?? () from /usr/lib/libQtGui.so.4
#22 0x08fcf640 in ?? ()
#23 0x00000000 in ?? ()
#0  0xb7ffa424 in __kernel_vsyscall ()
Comment 1 Frank Reininghaus 2008-11-11 19:46:52 UTC
*** Bug 174854 has been marked as a duplicate of this bug. ***
Comment 2 Frank Reininghaus 2008-11-11 19:48:35 UTC
*** Bug 173080 has been marked as a duplicate of this bug. ***
Comment 3 David Faure 2008-11-28 12:26:18 UTC
SVN commit 890034 by dfaure:

Refactor of the filtering functionality in KDirLister, so that toggling one filter does emit the right added/removed items
(the old logic would ignore the effect of other filters still active at the same time). For instance toggling hidden files/dirs
in okular's KFileDialog (which sets a mime filter) would not manage to remove hidden dirs like ".kde" (*),
so after doing it a few times you'd have those dirs shown 4 times :)
(*) because the new logic in KDirModel bails out if the list of items to hide contains already-hidden items

BUG: 174788
CCMAIL: brade@kde.org


 M  +112 -161  kio/kdirlister.cpp  
 M  +0 -4      kio/kdirlister.h  
 M  +31 -13    kio/kdirlister_p.h  
 M  +60 -16    tests/kdirmodeltest.cpp  
 M  +1 -0      tests/kdirmodeltest.h  


WebSVN link: http://websvn.kde.org/?view=rev&revision=890034
Comment 4 Frank Reininghaus 2008-12-05 22:32:18 UTC
*** Bug 176575 has been marked as a duplicate of this bug. ***