Refactor of the filtering functionality in KDirLister, so that toggling one filter does emit the right added/removed items (the old logic would ignore the effect of other filters still active at the same time). For instance toggling hidden files/dirs in okular's KFileDialog (which sets a mime filter) would not manage to remove hidden dirs like ".kde" (*), so after doing it a few times you'd have those dirs shown 4 times :) (*) because the new logic in KDirModel bails out if the list of items to hide contains already-hidden items

BUG: 174788
CCMAIL: brade@kde.org

svn path=/trunk/KDE/kdelibs/; revision=890034